--- a/my-nginx-container/Dockerfile
+++ b/my-nginx-container/Dockerfile
@@ -1,6 +1,7 @@
 # Use the official Nginx image as the base image
 FROM nginx
 
+MAINTAINER rajeshindala143@gmail.com
 # Remove the default Nginx configuration file
 RUN rm /etc/nginx/nginx.conf
 
